Fix issue with aggregate functions on literals
When applying an aggregate function (SUM, MIN, AVG, etc.) on literals an
`IndexOutOfBoundsException` was thrown since we were trying to get an
aggregationReference from an empty list. i.e.:
```
SELECT SUM(10) FROM test HAVING COUNT(1) > 0
```
Guard the call to `AggregateFunction#getDocValueAggregator()` with a
check and return a null if literals are used.

Closes: #12879
(cherry picked from commit a0277c9e19475e90f8583dd4afa65ebe32e8d8e5)